--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,34 @@
+### Project specific ignores
+.deps
+.dirstamp
+cmake-build-debug
+libtool
+
+
+
+# http://www.gnu.org/software/autoconf
+
+/Makefile
+/Makefile.in
+/autom4te.cache
+/autoscan.log
+/autoscan-*.log
+/aclocal.m4
+/compile
+/config.guess
+/config.h.in*
+/config.h
+/config.log
+/config.sub
+/config.status
+/configure
+/configure.scan
+/depcomp
+/install-sh
+/missing
+/stamp-h1
+/build
+
 # Prerequisites
 *.d
 
