added base64 support.

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,10 +10,12 @@ MODULES_LDFLAGS = -avoid-version -module -shared -export-dynamic
 
 sqrl_login_associate_SOURCES = \
         src/google_qrcode.c \
+	src/base64.c \
 	src/sqrl_login_associate.c
 
 pam_sqrl_login_la_SOURCES = \
         src/google_qrcode.c \
+	src/base64.c \
 	src/pam_sqrl_login.c
 pam_sqrl_login_la_LIBADD  = -lpam
 pam_sqrl_login_la_CFLAGS  = $(AM_CFLAGS)
